--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
         "module": "amd",
+        "target": "es6",
         "outFile": "../dist/index.js"
     },
     "include": [
-        "../node_modules/phaser-ce/typescript/phaser.d.ts",
+        "../node_modules/phaser-ce/typescript/phaser.comments.d.ts",
         "./**/*.ts"
     ]
 }
